<resources>
    <string name="app_name">LogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttons_welcome">Please interact with the buttons to track your clicks</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="see_all_logs">See all logs</string>
    <string name="delete_logs">Delete logs</string>
</resources>